# synheart-flux

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
examples/: gen_hsi.rs  test_input.ndjson
scripts/: build-android.sh  build-desktop.sh  build-ios-xcframework.sh
src/: baseline.rs  context.rs  encoder.rs  error.rs  features.rs  ffi.rs  lib.rs  normalizer.rs  pipeline.rs  types.rs
src/adapters/: garmin.rs  mod.rs  whoop.rs
src/behavior/: adapter.rs  baseline.rs  encoder.rs  features.rs  mod.rs  normalizer.rs  pipeline.rs  types.rs
src/schema/: adapter.rs  mod.rs  raw_event.rs
