[package]
name = "synheart-flux"
version = "0.1.0"
edition = "2021"
authors = ["Synheart AI Inc <opensource@synheart.ai>"]
description = "On-device compute engine for HSI-compliant human state signals"
license = "Apache-2.0"
repository = "https://github.com/synheart/synheart-flux"
readme = "README.md"
keywords = ["wearables", "health", "signals", "hsi", "on-device"]

[lib]
name = "synheart_flux"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
pretty_assertions = "1.4"

[features]
default = []
ffi = []
